Issue #2315885 by Gábor Hojtsy: Fixed Quickfix: language settings page seriously misaligned.

--- a/core/modules/content_translation/css/content_translation.admin.css
+++ b/core/modules/content_translation/css/content_translation.admin.css
@@ -6,9 +6,6 @@
 #language-content-settings-form table .bundle {
   width: 24%;
 }
-#language-content-settings-form table td.bundle {
-  font-weight: bold;
-}
 #language-content-settings-form table .field {
   padding-left: 3em; /* LTR */
   width: 24%;
