--- a/core/modules/language/css/language.admin.css
+++ b/core/modules/language/css/language.admin.css
@@ -6,11 +6,6 @@
 #language-content-settings-form table .bundle {
   width: 25%;
 }
-
-#language-content-settings-form table td.bundle {
-  font-weight: bold;
-}
-
 #language-content-settings-form table .operations {
   width: 75%;
 }
